--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@
 name: Fred Kozlowski
 bio: Student and Udon Lover
 
+title: Fred Kozlowski
+
 # twitter summary info
 description: This is where I get to be show off
 
