--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@
 name: Fred Kozlowski
 bio: Student and Udon Lover
 
+title: Fred Kozlowski
+
 # twitter summary info
 description: A blog where I get to show off
 
