--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ disqus:
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: https://github.com/fredkozlowski
+github: fredkozlowski
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
