--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ picture: assets/images/profile.jpg
 # and specify source (external or local).
 resume: true
 resume-external: false
-resume-url: /Resume_July_2017.pdf
+resume-url: /Resume_September_2017.pdf
 
 url: http://fredkozlowski.me
 # your url: http://USERNAME.github.io
