--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ picture: assets/images/profile.jpg
 # and specify source (external or local).
 resume: true
 resume-external: false
-resume-url: /Resume_January_2018.pdf
+resume-url: /Resume_February_2018.pdf
 
 url: http://fredkozlowski.me
 # your url: http://USERNAME.github.io
