--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
+resume: false
 resume-external: false
 resume-url: /Resume_February_2018.pdf
 
