--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: false
+resume: true
 resume-external: false
-resume-url: /Resume_February_2018.pdf
+resume-url: /Resume_September_2018.pdf
 
 url: http://fredkozlowski.me
 # your url: http://USERNAME.github.io
